log
Thu 25 Apr 2024 03:38:26 PM UTC: 
 tests:  0|6
total_score: 0/70
fbc4a46
Thu 25 Apr 2024 03:49:08 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  1|6
total_score: 10/70
8f00fe9
Thu 25 Apr 2024 03:54:32 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
5d3f667
Thu 25 Apr 2024 03:55:21 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
ca178e5
Thu 25 Apr 2024 03:55:50 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
8d8fb6e
Thu 25 Apr 2024 04:02:37 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:69:7: error: unused variable ‘Oldsize’ [-Werror=unused-variable]
   69 |   int Oldsize = map->size;
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
61bb12d
Thu 25 Apr 2024 04:02:54 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
9798406
Thu 25 Apr 2024 04:03:31 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|4
total_score: 30/70
2dbc8b6
Thu 25 Apr 2024 04:04:41 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|4
total_score: 30/70
959d3ff
Thu 25 Apr 2024 04:05:17 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
d2770ad
Thu 25 Apr 2024 04:08:27 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
2673956
Thu 25 Apr 2024 04:08:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
068ef8a
Sat 27 Apr 2024 07:30:44 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  7|3
total_score: 40/70
a02efd3
Sat 27 Apr 2024 08:00:19 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:109:16: error: returning ‘int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Werror=int-conversion]
  109 |         return pos;
      |                ^~~
hashmap.c:113:10: error: returning ‘int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Werror=int-conversion]
  113 |   return pos;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
628d313
Sat 27 Apr 2024 08:05:20 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 40/70
2badd3b
Sat 27 Apr 2024 08:05:44 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|3
total_score: 40/70
2587884
Sat 27 Apr 2024 08:07:48 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 50/70
d8e90d9
Sat 27 Apr 2024 08:07:59 AM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
  114 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bebb7b5
Sat 27 Apr 2024 08:08:37 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 50/70
8639451
Sat 27 Apr 2024 08:14:28 AM UTC: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 50/70
d588118
